# QtTest

./: CMakeLists.txt  README.md
include/: ScreenThread.h  Window.h
src/: ScreenThread.cpp  Window.cpp  main.cpp
